# jsk_apc

./: .gitattributes  .gitignore  .gitmodules  .mention-bot  .rosinstall  .travis.before_runtests  .travis.rosinstall  .travis.rosinstall.indigo  .travis.rosinstall.jade  .travis.rosinstall.kinetic  .travis.rosinstall.melodic  .travis.rosinstall.noetic  .travis.yml  LICENSE  README.md  fc.rosinstall  fc.rosinstall.indigo  fc.rosinstall.kinetic  fc.rosinstall.melodic  fc.rosinstall.noetic  jsk_2014_picking_challenge.rosinstall  jsk_2015_05_baxter_apc.rosinstall  rosdoc.yaml  sim.rosinstall.indigo  sim.rosinstall.kinetic  sim.rosinstall.melodic  simulator.rosinstall  travis.sh.patch  upboard.rosinstall  upboard.rosinstall.kinetic
demos/baxter_paper_filing/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
demos/baxtergv6_apc2016/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
demos/selective_dualarm_grasping/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
demos/selective_dualarm_stowing/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
jsk_2014_apc/: CMakeLists.txt  package.xml
jsk_2014_apc/msg/: BinContents.msg  BinContentsArray.msg  WorkOrderArray.msg
jsk_2014_apc/scripts/: objects_marker_server.py
jsk_2014_apc_common/: CMakeLists.txt  package.xml
jsk_2014_apc_common/msg/: BinContentsArray.msg  WorkOrderArray.msg
jsk_2014_apc_common/scripts/: bin_contents.py  objects_marker_server.py  work_order.py
jsk_2014_picking_challenge/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_2014_picking_challenge/action/: EusCommand.action  MoveArm2TargetBin.action
jsk_2014_picking_challenge/archives/: get_arm_status.py  picking_up_demo.l
jsk_2014_picking_challenge/config/: baxter_box_move.rviz  baxter_white_hand.urdf  baxter_white_hand.urdf.xacro  challenge.rviz  challenge_passthrough.rviz  openni_self_filter_custom.yaml
jsk_2014_picking_challenge/data/: apc-d.json  classifier_weight.yml  example.json  object_list.yml
jsk_2014_picking_challenge/euslisp/: apc-tweet.l  apc_tweet.l  arm-motion.l  get-item.l  gripper-control-test.l  main.l  move-arm2target-bin-server-class.l  move-arm2target-bin-server.l  move-arm2target-bin.l  move-for-verification.l  object-picking-action-server-class.l  object-picking-server.l  pod-lowres.l  put-orderbin.l  qrcode-pos-server.l  robot-communication.l  robot-init.l  robot-input.l  robot-main-action-server.l  robot-main-master.l  robot-main.l  robot-motions.l  robot-recognition.l  robot-test.l  robot-test2.l  robot-visualization.l  target-pick-region.l  utils.l
jsk_2014_picking_challenge/firmware/: CMakeLists.txt  switching_gripper_left.cpp  switching_gripper_right.cpp
jsk_2014_picking_challenge/launch/: attention_divide.launch  baxter.launch  baxter_box_movement.launch  baxter_box_movement_with_moveit.launch  baxter_head_qrcode_detect.launch  baxter_left_hand_qrcode_detect.launch  baxter_oneclick_grasp.launch  baxter_organized_multi.launch  baxter_world.launch  bof_object_matcher.launch  challenge.launch  challenge_test1.launch  challenge_test2.launch  color_histogram.launch  color_histogram_matcher.launch  color_histogram_matcher_t.launch  demo_real.launch  doura.launch  edge_publisher.launch  extract_color_histogram.launch  extract_each_bin.launch  extract_sift.launch  final_video.launch  kinect2_tf.launch  main.launch  passthrough_image.launch  record.launch  robot_main_action_server.launch  see_if_grabbed.launch  setup.launch  sift_matcher.launch  test_bof_object_matcher.launch  test_color_histogram_matching.launch  test_color_object_verification.launch  test_sift_matching.launch  upload_baxter.launch
jsk_2014_picking_challenge/msg/: QrStamp.msg  bin_content.msg
jsk_2014_picking_challenge/scripts/: README.md  baxter_speak.py  bof_object_matcher.py  check_after_boot.py  check_after_setup.py  collect-camera.l  color_cutbacker.py  color_histogram_matcher.py  color_object_matcher.py  common.py  demo_real.py  extract_bof.py  extract_bof_histogram.py  extract_bof_histograms.py  extract_color_histogram.py  extract_sift_from_objdata.py  feature_label_object_detector.py  get_arm_position.py  get_arm_status.py  master.py  matcher_common.py  move_arm2target_bin_client.py  move_arm_client.py  move_arm_listener.py  move_arm_server.py  move_right_arm_server.py  move_right_arm_talker_test.py  object_picking_client.py  object_verification.py  objects_marker_server.py  read_json.py  saver.py  score_calculator.py  setup_baxter_gazebo.py  setup_target.py  sift_matcher.py  sift_matcher_for_imgs.py  sift_matcher_oneimg.py  speak_qrcode_contents.py  take_photo.py  (+8 more)
jsk_2014_picking_challenge/src/: switching_gripper.cpp  talker.cpp
jsk_2014_picking_challenge/srv/: MoveArm.srv  ObjectVerification.srv
jsk_2014_picking_challenge/test/: color_histogram_matcher_test.py  measure-fastest-time.l  object_picking_client.py  open_color_histogram_data.py  test-robot-motion.l  test_color_histogram_matcher.py  test_robot_input.py
jsk_2014_picking_challenge/worlds/: empty_kiva.world  item_test.world
jsk_2015_05_baxter_apc/: CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  doc  package.xml  rosinstall  simulation.rosinstall
jsk_2015_05_baxter_apc/action/: ObjectPicking.action
jsk_2015_05_baxter_apc/archives/: demo_real.py  (+3 more)
jsk_2016_01_baxter_apc/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE_softkinetic  README.md  check_baxter_pkg_version.sh  kinect2.rosinstall  package.xml  plugin.xml  rosinstall  setup.py
jsk_apc/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_apc2015_common/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE_berkeley_models  LICENSE_kiva_pod  README.rst  package.xml  setup.py
jsk_apc2016_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
jsk_arc2017_baxter/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  ros_control_plugins.xml  setup.py
jsk_arc2017_common/: CHANGELOG.rst  CMakeLists.txt  doc  package.xml  setup.py
jskbaxter2_moveit_config/: .gitignore  .setup_assistant  CMakeLists.txt  package.xml
(+2535 files in other folders)
