<?xml version="1.0"?>
<package>
  <name>jsk_2014_apc</name>
  <version>0.0.1</version>
  <description>
   <p>Metapackage named jsk_2014_apc</p>
  </description>

  <maintainer email="baxter@jsk.imi.i.u-tokyo.ac.jp">baxter</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>jsk_2014_apc_common</run_depend>
  <run_depend>jsk_2014_baxter_apc</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
