<?xml version="1.0"?>
<package>
  <name>jsk_2014_apc_common</name>
  <version>0.1.1</version>
  <description>The jsk_2014_apc_common package</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/start-jsk/jsk_picking_challenge</url>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>jsk_2014_baxter_apc</run_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>

  <export></export>
</package>