<?xml version="1.0"?>
<package>
  <name>jsk_2014_picking_challenge</name>
  <version>0.0.1</version>
  <description>The jsk_2014_picking_challenge package</description>
  <maintainer email="baxter@jsk.imi.i.u-tokyo.ac.jp">baxter</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxtereus</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sound_play</build_depend>

  <run_depend>baxtereus</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  <export>
  </export>
</package>
