<?xml version="1.0"?>
<package>
  <name>jsk_2015_05_baxter_apc</name>
  <version>0.2.2</version>
  <description>ROS package for Amazon Picking Challenge in May 2015</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <author email="ab.ioryz@gmail.com">Iori Yanokura</author>
  <author email="inagaki@jsk.imi.i.u-tokyo.ac.jp">Yuto Inagaki</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>baxtereus</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>imagesift</run_depend>
  <run_depend>jsk_apc2015_common</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <run_depend>python-gdown</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>python-progressbar</run_depend>
  <run_depend>python-skimage</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-termcolor</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>jsk_tools</test_depend>
  <test_depend>rostest</test_depend>

  <export></export>
</package>
