<?xml version="1.0"?>
<package>
  <name>jsk_2015_05_baxter_apc</name>
  <version>4.1.9</version>
  <description>ROS package for Amazon Picking Challenge in May 2015</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <author email="ab.ioryz@gmail.com">Iori Yanokura</author>
  <author email="inagaki@jsk.imi.i.u-tokyo.ac.jp">Yuto Inagaki</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_2015_05_baxter_apc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxter_description</build_depend>
  <build_depend>collada_urdf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>baxter_gazebo</run_depend>
  <!--
  FIXME: Can't be installed on build.ros.org.
  https://github.com/start-jsk/jsk_apc/issues/2069
  <run_depend>baxter_sim_hardware</run_depend>
  -->
  <run_depend>baxtereus</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>imagesift</run_depend>
  <run_depend>jsk_apc2015_common</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <run_depend>python-gdown-pip</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>python-progressbar</run_depend>
  <run_depend>python-skimage</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-termcolor</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlebot_description</run_depend>

  <test_depend>jsk_tools</test_depend>

  <export></export>
</package>
