<?xml version="1.0"?>
<package format="3">
  <name>jsk_2015_05_baxter_apc</name>
  <version>4.3.0</version>
  <description>ROS package for Amazon Picking Challenge in May 2015</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <author email="ab.ioryz@gmail.com">Iori Yanokura</author>
  <author email="inagaki@jsk.imi.i.u-tokyo.ac.jp">Yuto Inagaki</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_2015_05_baxter_apc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxter_description</build_depend>
  <build_depend>collada_urdf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>baxter_gazebo</exec_depend>
  <!--
  FIXME: Can't be installed on build.ros.org.
  https://github.com/start-jsk/jsk_apc/issues/2069
  <exec_depend>baxter_sim_hardware</exec_depend>
  -->
  <exec_depend>baxtereus</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>imagesift</exec_depend>
  <exec_depend>jsk_apc2015_common</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_rqt_plugins</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>posedetection_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-gdown-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-gdown-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-progressbar</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-progressbar</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-skimage</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-skimage</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-sklearn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-sklearn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-termcolor</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-termcolor</exec_depend>
  <exec_depend>roseus</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>

  <test_depend>jsk_tools</test_depend>

  <export></export>
</package>
