<?xml version="1.0"?>
<package>
  <name>jsk_2016_01_baxter_apc</name>
  <version>0.2.4</version>
  <description>Common stacks for Amazon Picking Challenge 2016</description>

  <maintainer email="pazeshun3684@gmail.com">pazeshun</maintainer>
  <maintainer email="kimhc6028@gmail.com">Kim Heecheol</maintainer>
  <maintainer email="shingogo@hotmail.co.jp">Shingo Kitagawa</maintainer>
  <maintainer email="bowofvinderre@gmail.com">Bando Masahiro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- FIXME: https://github.com/start-jsk/jsk_apc/issues/1253 -->
  <build_depend>jsk_2015_05_baxter_apc</build_depend>

  <build_depend>baxter_description</build_depend>
  <build_depend>collada_urdf</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>ruby</build_depend> <!-- for erb -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>baxter_gazebo</run_depend>
  <run_depend>baxter_sim_controllers</run_depend>
  <run_depend>baxter_sim_io</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>jsk_2015_05_baxter_apc</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>jsk_tools</test_depend>
</package>
