<?xml version="1.0"?>
<package format="3">
  <name>jsk_2016_01_baxter_apc</name>
  <version>4.3.0</version>
  <description>Common stacks for Amazon Picking Challenge 2016</description>

  <maintainer email="pazeshun3684@gmail.com">Hasegawa Shun</maintainer>
  <maintainer email="kimhc6028@gmail.com">Kim Heecheol</maintainer>
  <maintainer email="shingogo@hotmail.co.jp">Shingo Kitagawa</maintainer>
  <maintainer email="bowofvinderre@gmail.com">Bando Masahiro</maintainer>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <maintainer email="niitani@jsk.imi.i.u-tokyo.ac.jp">Yusuke Niitani</maintainer>


  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_2016_01_baxter_apc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- FIXME: https://github.com/start-jsk/jsk_apc/issues/1253 -->
  <build_depend>jsk_2015_05_baxter_apc</build_depend>

  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_description</build_depend>
  <build_depend>collada_urdf</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>ruby</build_depend> <!-- for erb -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamixel_msgs</build_depend>

  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_gazebo</exec_depend>
  <exec_depend>baxter_moveit_config</exec_depend>
  <exec_depend>baxter_sim_controllers</exec_depend>
  <exec_depend>baxter_sim_io</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>jsk_2015_05_baxter_apc</exec_depend>
  <exec_depend>jsk_apc2016_common</exec_depend>
  <exec_depend>jsk_baxter_startup</exec_depend>
  <exec_depend>jsk_interactive_marker</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dynamixel_msgs</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION==2">python-gdown-pip</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION==3">python3-gdown-pip</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>jsk_tools</test_depend>
</package>
